Added Chattier avatar to home

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,20 @@ layout: compress
 
   <body class="site">
 
+    <!-- Embed a Chattier avatar -->
+    <div>
+      <iframe
+        src="https://chattier.dev/chatbot-iframe?cid=OibCcZJmSLG1sAhDRCHQ&size=medium&type=avatar&identity=female1&language=en-GB"
+        width="400px"
+        height="400px"
+        frameborder="0"
+        allowtransparency="true"
+        referrerpolicy="no-referrer-when-downgrade"
+        style="border:0; position:fixed; right: 0.5rem; bottom: 0.5rem; z-index: 500"
+        allow="microphone">
+      </iframe>
+    </div>
+
     {% if site.google_tag_manager %}
 
       <!-- Google Tag Manager (noscript) -->
